Tela de Catálogo e home completa

--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -2,88 +2,249 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Akatsuki.Uv</title>
-  <link rel="stylesheet" href="./styles/header.css">
-  <link rel="stylesheet" href="./styles/index.css">
-  <link rel="stylesheet" href="./styles/home.css">
-  <link rel="stylesheet" href="./styles/button-home.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Akatsuki.UV</title>
+    <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/home.css">
+    <link rel="stylesheet" href="./styles/button-home.css">
+    <link rel="stylesheet" href="./styles/catalogue.css">
+    <link rel="stylesheet" href="./styles/footer.css">
 </head>
 
 <body>
-  <header>
-    <nav>
-      <button class="nav-btn-header">
-        <a href="">Home</a>
-      </button>
-      <button class="nav-btn-header">
-        <a href="">Sobre</a>
-      </button>
-      <button class="nav-btn-header">
-        <a href="">Login</a>
-      </button>
-    </nav>
-    <div class="sub-container-header">
-      <div class="cart-container">
-        <a href="">
-          <img class="carticon" src="../../../assets/carticon.svg" alt="">
-        </a>
-      </div>
-      <div class="account-icon-container">
-        <a href="">
-          <img class="icon" src="../../../assets/accounticon.svg" alt="">
-        </a>
-      </div>
+    <header>
+        <nav>
+            <button class="nav-btn-header">
+                <a href="">Home</a>
+            </button>
+            <button class="nav-btn-header">
+                <a href="">Sobre</a>
+            </button>
+            <button class="nav-btn-header">
+                <a href="">Login</a>
+            </button>
+        </nav>
+        <div class="sub-container-header">
+            <div class="cart-container">
+                <a href="">
+                    <img class="carticon" src="../../../assets/carticon.svg" alt="">
+                </a>
+            </div>
+            <div class="account-icon-container">
+                <a href="">
+                    <img class="icon" src="../../../assets/accounticon.svg" alt="">
+                </a>
+            </div>
+        </div>
+    </header>
+
+
+
+
+
+
+
+
+    <div class="home-container">
+        <div class="art-container">
+            <img src="../../../assets/home-art.svg" alt="">
+        </div>
+        <div class="text-container">
+            <div class="title-sub-container">
+                <img src="../../../assets/logo-icon.svg" alt="">
+            </div>
+            <div class="desc-sub-container">
+                <p>
+                    Aqui, você encontra produtos exclusivos inspirados na lendária organização de ninjas. Roupas,
+                    acessórios e
+                    itens colecionáveis para mostrar sua paixão pela Akatsuki. Seja parte do legado e leve para casa a
+                    energia e o
+                    poder dessa incrível equipe. Não perca a chance de ter algo único em sua coleção!
+                </p>
+            </div>
+            <div class="btn-container">
+                <button class="btn-home-1">
+                    <a href="">Sobre</a>
+                </button>
+                <button class="btn-home-2">
+                    <a href="">Nossos Artigos</a>
+                </button>
+            </div>
+        </div>
     </div>
-  </header>
 
 
 
 
-
-
-
-
-  <div class="home-container">
-    <div class="art-container">
-      <img src="../../../assets/home-art.svg" alt="">
+    <div class="title-section-container">
+        <h1>Catálogo</h1>
     </div>
-    <div class="text-container">
-      <div class="title-sub-container">
-        <img src="../../../assets/logo-icon.svg" alt="">
-      </div>
-      <div class="desc-sub-container">
-        <p>
-          Aqui, você encontra produtos exclusivos inspirados na lendária organização de ninjas. Roupas, acessórios e
-          itens colecionáveis para mostrar sua paixão pela Akatsuki. Seja parte do legado e leve para casa a energia e o
-          poder dessa incrível equipe. Não perca a chance de ter algo único em sua coleção!
-        </p>
-      </div>
-      <div class="btn-container">
-        <button class="btn-home-1">
-          <a href="">Sobre</a>
-        </button>
-        <button class="btn-home-2">
-          <a href="">Nossos Artigos</a>
-        </button>
-      </div>
+    <div class="container-catalogue">
+        <div class="catalogue-line">
+            <div class="card">
+                <div class="img-container-card"><img src="../../../assets/mochila-product.png" alt=""></div>
+                <div class="desc-container-card">
+                    <h1>Mochila</h1>
+                    <h3>Acessórios</h4>
+                        <h4>R$ 100.00</h2>
+                </div>
+                <div class="action-area-card">
+                    <div class="sub-action-area">
+                        <button>Comprar</button>
+                        <img src="../../../assets/cart-add-icon.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img-container-card"><img src="../../../assets/cloak-product.png" alt=""></div>
+                <div class="desc-container-card">
+                    <h1>Manto Akatsuki</h1>
+                    <h3>Roupas</h4>
+                        <h4>R$ 100.00</h2>
+                </div>
+                <div class="action-area-card">
+                    <div class="sub-action-area">
+                        <button>Comprar</button>
+                        <img src="../../../assets/cart-add-icon.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img-container-card"><img src="../../../assets/mug-product.png" alt=""></div>
+                <div class="desc-container-card">
+                    <h1>Caneca</h1>
+                    <h3>Lembranças</h4>
+                        <h4>R$ 100.00</h2>
+                </div>
+                <div class="action-area-card">
+                    <div class="sub-action-area">
+                        <button>Comprar</button>
+                        <img src="../../../assets/cart-add-icon.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="catalogue-line">
+            <div class="card">
+                <div class="img-container-card"><img src="../../../assets/sweatshirt-product.png" alt=""></div>
+                <div class="desc-container-card">
+                    <h1>Moletom</h1>
+                    <h3>Roupas</h4>
+                        <h4>R$ 100.00</h2>
+                </div>
+                <div class="action-area-card">
+                    <div class="sub-action-area">
+                        <button>Comprar</button>
+                        <img src="../../../assets/cart-add-icon.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img-container-card"><img src="../../../assets/t-shirt-product.png" alt=""></div>
+                <div class="desc-container-card">
+                    <h1>Camiseta</h1>
+                    <h3>Roupas</h4>
+                        <h4>R$ 100.00</h2>
+                </div>
+                <div class="action-area-card">
+                    <div class="sub-action-area">
+                        <button>Comprar</button>
+                        <img src="../../../assets/cart-add-icon.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img-container-card"><img src="../../../assets/bag-product.png" alt=""></div>
+                <div class="desc-container-card">
+                    <h1>Bag Ecologica</h1>
+                    <h3>Acessórios</h4>
+                        <h4>R$ 100.00</h2>
+                </div>
+                <div class="action-area-card">
+                    <div class="sub-action-area">
+                        <button>Comprar</button>
+                        <img src="../../../assets/cart-add-icon.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="catalogue-line">
+            <div class="card">
+                <div class="img-container-card"><img src="../../../assets/mug2-product.png" alt=""></div>
+                <div class="desc-container-card">
+                    <h1>Caneca</h1>
+                    <h3>Lembranças</h4>
+                        <h4>R$ 100.00</h2>
+                </div>
+                <div class="action-area-card">
+                    <div class="sub-action-area">
+                        <button>Comprar</button>
+                        <img src="../../../assets/cart-add-icon.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img-container-card"><img src="../../../assets/cap2-product.png" alt=""></div>
+                <div class="desc-container-card">
+                    <h1>Bucket</h1>
+                    <h3>Acessórios</h4>
+                        <h4>R$ 100.00</h2>
+                </div>
+                <div class="action-area-card">
+                    <div class="sub-action-area">
+                        <button>Comprar</button>
+                        <img src="../../../assets/cart-add-icon.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img-container-card"><img src="../../../assets/cap-product.png" alt=""></div>
+                <div class="desc-container-card">
+                    <h1>Boné</h1>
+                    <h3>Acessórios</h4>
+                        <h4>R$ 100.00</h2>
+                </div>
+                <div class="action-area-card">
+                    <div class="sub-action-area">
+                        <button>Comprar</button>
+                        <img src="../../../assets/cart-add-icon.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 
 
 
 
+    <footer>
+        <nav>
+            <div class="sections">
+                <h1>Seções</h1>
+                <h2>Informações</h2>
+                <h2>Login</h2>
+                <h2>Sobre nós</h2>
+            </div>
+            <div class="contact">
+                <h1>Contato</h1>
+                <h2>Akatsuki.uv@gmail.com</h2>
+                <h2>(11) 91426-2903/h2>
+                <h2>4321-1234</h2>
+            </div>
+            <div class="links">
+                <h1>Links</h1>
+                <h2>Instagram</h2>
+                <h2>Facebook</h2>
+                <h2>Whatsapp</h2>
+            </div>
 
-  <div class="catalogue-container">
-
-
-  </div>
-
-
-
-
-
+        </nav>
+        <div class="footer-logo">
+            <img src="../../../assets/logo-icon.svg" alt="">
+        </div>
+    </footer>
 
 
 
