--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -17,19 +17,19 @@
   <header>
     <nav>
       <button class="nav-btn-header">
-        <a href="">Home</a>
+        <a href="../home/index.html">Home</a>
       </button>
       <button class="nav-btn-header">
         <a href="">Sobre</a>
       </button>
       <button class="nav-btn-header">
-        <a href="">Login</a>
+        <a href="../login/index.html">Login</a>
       </button>
     </nav>
     <div class="sub-container-header">
       <div class="cart-container">
         <a href="">
-          <img class="carticon" src="../../../assets/carticon.svg" alt="">
+          <img class="carticon" src="../../../assets/carticon.png" alt="">
         </a>
       </div>
       <div class="account-icon-container">
@@ -296,8 +296,8 @@
       <div class="contact">
         <h1>Contato</h1>
         <h2>Akatsuki.uv@gmail.com</h2>
-        <h2>(11) 91426-2903/h2>
-          <h2>4321-1234</h2>
+        <h2>(11) 91426-2903 </h2>
+        <h2>4321-1234</h2>
       </div>
       <div class="links">
         <h1>Links</h1>
