refatorando código pagina sobre nós

--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -18,10 +18,10 @@
         <a href="../home/index.html">Home</a>
       </button>
       <button class="nav-btn-header">
-        <a href="">Sobre</a>
+        <a href="../../pages/sobre/index.html">Sobre</a>
       </button>
       <button class="nav-btn-header">
-        <a href="../login/index.html">Login</a>
+        <a href="./index.html">Login</a>
       </button>
     </nav>
     <div class="sub-container-header">
