--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 <body>
     <header>
         <nav>
-            <a href="/index.html">
+            <a href="index.html">
                 <button class="nav-btn-header">Home</button>
             </a>
-            <a href="/public/pages/sobre/index.html">
+            <a href="public/pages/sobre/index.html">
                 <button class="nav-btn-header">Sobre</button>
             </a>
 
-            <a href="/public/pages/login/index.html">
+            <a href="public/pages/login/index.html">
                 <button class="nav-btn-header">Login</button>
             </a>
         </nav>
