--- a/index.html
+++ b/index.html
@@ -30,36 +30,36 @@
             <a href="index.html">
                 <button class="nav-btn-header">Home</button>
             </a>
-            <a href="public/pages/sobre/index.html">
+            <a href="./public/pages/sobre/index.html">
                 <button class="nav-btn-header">Sobre</button>
             </a>
 
-            <a href="public/pages/login/index.html">
+            <a href="./public/pages/login/index.html">
                 <button class="nav-btn-header">Login</button>
             </a>
         </nav>
         <div class="sub-container-header">
             <div class="cart-container">
-                <a href="/public/pages/cart/index.html">
-                    <img class="carticon" src="../../../assets/carticon.png" alt="">
+                <a href="./public/pages/cart/index.html">
+                    <img class="carticon" src="./assets/carticon.png" alt="">
                 </a>
             </div>
             <div class="account-icon-container">
                 <a href="">
-                    <img class="icon" src="../../../assets/accounticon.svg" alt="">
+                    <img class="icon" src="./assets/accounticon.svg" alt="">
                 </a>
             </div>
         </div>
     </header>
     <div class="home-container">
         <div class="art-container">
-            <img src="../../../assets/home-art.svg" alt="">
+            <img src="./assets/home-art.svg" alt="">
         </div>
         <div class="text-container">
             <div class="title-sub-container">
             </div>
             <div class="desc-sub-container">
-                <img src="../../../assets/logo-icon.svg" alt="">
+                <img src="./assets/logo-icon.svg" alt="">
 
                 <p>
                     Aqui, você encontra produtos exclusivos inspirados na lendária organização de ninjas. Roupas,
@@ -70,7 +70,7 @@
                 </p>
             </div>
             <div class="btn-container">
-                <a href="/public/pages/sobre/index.html">
+                <a href="./public/pages/sobre/index.html">
                     <button class="btn-home-1">
                         Sobre
                     </button>
@@ -94,7 +94,7 @@
     <div class="container-catalogue">
         <div class="catalogue-line">
             <div class="card">
-                <div class="card-img"> <img src="../../../assets/sweatshirt-product.png" alt=""></div>
+                <div class="card-img"> <img src="../assets/sweatshirt-product.png" alt=""></div>
                 <div class="card-info">
                     <p class="text-title">Moletom </p>
                     <p class="textbody">Roupas</p>
@@ -117,7 +117,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-img"> <img src="../../../assets/cap-product.png" alt=""></div>
+                <div class="card-img"> <img src="./assets/cap-product.png" alt=""></div>
                 <div class="card-info">
                     <p class="text-title">Boné </p>
                     <p class="textbody">Acessórios</p>
@@ -140,7 +140,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-img"> <img src="../../../assets/cap2-product.png" alt=""></div>
+                <div class="card-img"> <img src="./assets/cap2-product.png" alt=""></div>
                 <div class="card-info">
                     <p class="text-title">Bucket</p>
                     <p class="textbody">Acessórios</p>
@@ -165,7 +165,7 @@
         </div>
         <div class="catalogue-line">
             <div class="card">
-                <div class="card-img"> <img src="../../../assets/cloak-product.png" alt=""></div>
+                <div class="card-img"> <img src="./assets/cloak-product.png" alt=""></div>
                 <div class="card-info">
                     <p class="text-title">Manto </p>
                     <p class="textbody">Roupas</p>
@@ -188,7 +188,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-img"> <img src="../../../assets/mug-product.png" alt=""></div>
+                <div class="card-img"> <img src="./assets/mug-product.png" alt=""></div>
                 <div class="card-info">
                     <p class="text-title">Caneca </p>
                     <p class="textbody">Lembranças</p>
@@ -211,7 +211,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-img"> <img src="../../../assets/mug2-product.png" alt=""></div>
+                <div class="card-img"> <img src="./assets/mug2-product.png" alt=""></div>
                 <div class="card-info">
                     <p class="text-title">Caneca </p>
                     <p class="textbody">Lembranças</p>
@@ -236,7 +236,7 @@
         </div>
         <div class="catalogue-line">
             <div class="card">
-                <div class="card-img"> <img src="../../../assets/t-shirt-product.png" alt=""></div>
+                <div class="card-img"> <img src="./assets/t-shirt-product.png" alt=""></div>
                 <div class="card-info">
                     <p class="text-title">Camiseta </p>
                     <p class="textbody">Roupas</p>
@@ -259,7 +259,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-img"> <img src="../../../assets/bag-product.png" alt=""></div>
+                <div class="card-img"> <img src="./assets/bag-product.png" alt=""></div>
                 <div class="card-info">
                     <p class="text-title">Bag </p>
                     <p class="textbody">Acessórios</p>
@@ -282,7 +282,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-img"> <img src="../../../assets/mochila-product.png" alt=""></div>
+                <div class="card-img"> <img src="./assets/mochila-product.png" alt=""></div>
                 <div class="card-info">
                     <p class="text-title">Bag </p>
                     <p class="textbody">Acessórios</p>
@@ -310,9 +310,9 @@
         <nav>
             <div class="sections">
                 <h1>Seções</h1>
-                <a href="/public/pages/login/index.html"><h2>Login</h2></a>
-                <a href="/public/pages/sobre/index.html"><h2>Sobre nós</h2></a>
-                <a href="/public/pages/cart/index.html"><h2>Carrinho</h2></a>
+                <a href="./public/pages/login/index.html"><h2>Login</h2></a>
+                <a href="./public/pages/sobre/index.html"><h2>Sobre nós</h2></a>
+                <a href="./public/pages/cart/index.html"><h2>Carrinho</h2></a>
             </div>
             <div class="contact">
                 <h1>Contato</h1>
@@ -328,7 +328,7 @@
             </div>
         </nav>
         <div class="footer-logo">
-            <img src="../../../assets/logo-icon.svg" alt="">
+            <img src="./assets/logo-icon.svg" alt="">
         </div>
     </footer>
 </body>
