--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <button class="btn-home-2" onclick="scrollDown(event)">
                     <script>
                         function scrollDown(e) {
-                          e.preventDefault(); // Impede comportamento padrão
+                          e.preventDefault();
                           window.scrollBy({ top: 1000, behavior: 'smooth' });
                         }
                       </script>
@@ -94,7 +94,7 @@
     <div class="container-catalogue">
         <div class="catalogue-line">
             <div class="card">
-                <div class="card-img"> <img src="../assets/sweatshirt-product.png" alt=""></div>
+                <div class="card-img"> <img src="./assets/sweatshirt-product.png" alt=""></div>
                 <div class="card-info">
                     <p class="text-title">Moletom </p>
                     <p class="textbody">Roupas</p>
