--- a/public/pages/register/index.html
+++ b/public/pages/register/index.html
@@ -20,20 +20,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <header>
         <nav>
-            <a href="/index.html">
+            <a href="./index.html">
                 <button class="nav-btn-header">Home</button>
             </a>
-            <a href="/public/pages/sobre/index.html">
+            <a href="./public/pages/sobre/index.html">
                 <button class="nav-btn-header">Sobre</button>
             </a>
 
-            <a href="/public/pages/login/index.html">
+            <a href="./public/pages/login/index.html">
                 <button class="nav-btn-header">Login</button>
             </a>
         </nav>
         <div class="sub-container-header">
             <div class="cart-container">
-                <a href="/public/pages/cart/index.html">
+                <a href="./public/pages/cart/index.html">
                     <img class="carticon" src="../../../assets/carticon.png" alt="">
                 </a>
             </div>
@@ -70,9 +70,9 @@
         <nav>
             <div class="sections">
                 <h1>Seções</h1>
-                <a href="/public/pages/login/index.html"><h2>Login</h2></a>
-                <a href="/public/pages/sobre/index.html"><h2>Sobre nós</h2></a>
-                <a href="/public/pages/cart/index.html"><h2>Carrinho</h2></a>
+                <a href="./public/pages/login/index.html"><h2>Login</h2></a>
+                <a href="./public/pages/sobre/index.html"><h2>Sobre nós</h2></a>
+                <a href="./public/pages/cart/index.html"><h2>Carrinho</h2></a>
             </div>
             <div class="contact">
                 <h1>Contato</h1>
