--- a/public/pages/cart/index.html
+++ b/public/pages/cart/index.html
@@ -17,20 +17,20 @@
 <body>
     <header>
         <nav>
-            <a href="/index.html">
+            <a href="./index.html">
                 <button class="nav-btn-header">Home</button>
             </a>
-            <a href="/public/pages/sobre/index.html">
+            <a href="./public/pages/sobre/index.html">
                 <button class="nav-btn-header">Sobre</button>
             </a>
 
-            <a href="/public/pages/login/index.html">
+            <a href="./public/pages/login/index.html">
                 <button class="nav-btn-header">Login</button>
             </a>
         </nav>
         <div class="sub-container-header">
             <div class="cart-container">
-                <a href="/public/pages/cart/index.html">
+                <a href="./public/pages/cart/index.html">
                     <img class="carticon" src="../../../assets/carticon.png" alt="">
                 </a>
             </div>
@@ -47,7 +47,7 @@
 
         <section class="cart-item">
             <div class="item-details">
-                <img src="/assets/mochila-product.png" alt="Mochila temática">
+                <img src="./assets/mochila-product.png" alt="Mochila temática">
                 <div>
                     <h3>Mochila temática</h3>
                     <p>Mochila temática</p>
@@ -67,7 +67,7 @@
 
         <section class="cart-item">
             <div class="item-details">
-                <img src="/assets/mug-product.png" alt="Caneca">
+                <img src="./assets/mug-product.png" alt="Caneca">
                 <div>
                     <h3>Caneca</h3>
                     <p>Lembranças</p>
@@ -87,7 +87,7 @@
 
         <section class="cart-item">
             <div class="item-details">
-                <img src="/assets/t-shirt-product.png" alt="Camiseta">
+                <img src="./assets/t-shirt-product.png" alt="Camiseta">
                 <div>
                     <h3>Camiseta</h3>
                     <p>Mochila temática</p>
@@ -119,9 +119,9 @@
         <nav>
             <div class="sections">
                 <h1>Seções</h1>
-                <a href="/public/pages/login/index.html"><h2>Login</h2></a>
-                <a href="/public/pages/sobre/index.html"><h2>Sobre nós</h2></a>
-                <a href="/public/pages/cart/index.html"><h2>Carrinho</h2></a>
+                <a href="./public/pages/login/index.html"><h2>Login</h2></a>
+                <a href="./public/pages/sobre/index.html"><h2>Sobre nós</h2></a>
+                <a href="./public/pages/cart/index.html"><h2>Carrinho</h2></a>
             </div>
             <div class="contact">
                 <h1>Contato</h1>
