--- a/public/pages/cart/index.html
+++ b/public/pages/cart/index.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="../../../styles/index.css">
     <link rel="stylesheet" href="../../../styles/header.css">
     <link rel="stylesheet" href="../../../styles/footer.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 
 </head>
 <body>
     <header>
         <nav>
-            <a href="./index.html">
+            <a href="../../../index.html">
                 <button class="nav-btn-header">Home</button>
             </a>
             <a href="./public/pages/sobre/index.html">
