--- a/public/pages/resetpassword/index.html
+++ b/public/pages/resetpassword/index.html
@@ -20,16 +20,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <header>
         <nav>
-            <a href="./index.html">
-                <button class="nav-btn-header">Home</button>
-            </a>
-            <a href="./public/pages/sobre/index.html">
-                <button class="nav-btn-header">Sobre</button>
-            </a>
+          <a href="../../../index.html">
+            <button class="nav-btn-header">Home</button>
+        </a>
+        <a href="../../pages/sobre/index.html">
+            <button class="nav-btn-header">Sobre</button>
+        </a>
 
-            <a href="./public/pages/login/index.html">
-                <button class="nav-btn-header">Login</button>
-            </a>
+        <a href="../../pages/login/index.html">
+            <button class="nav-btn-header">Login</button>
+        </a>
         </nav>
         <div class="sub-container-header">
             <div class="cart-container">
