--- a/public/pages/cart/index.html
+++ b/public/pages/cart/index.html
@@ -17,16 +17,16 @@
 <body>
     <header>
         <nav>
-            <a href="../../../index.html">
-                <button class="nav-btn-header">Home</button>
-            </a>
-            <a href="./public/pages/sobre/index.html">
-                <button class="nav-btn-header">Sobre</button>
-            </a>
+          <a href="../../../index.html">
+            <button class="nav-btn-header">Home</button>
+        </a>
+        <a href="../../pages/sobre/index.html">
+            <button class="nav-btn-header">Sobre</button>
+        </a>
 
-            <a href="./public/pages/login/index.html">
-                <button class="nav-btn-header">Login</button>
-            </a>
+        <a href="../../pages/login/index.html">
+            <button class="nav-btn-header">Login</button>
+        </a>
         </nav>
         <div class="sub-container-header">
             <div class="cart-container">
