--- a/public/pages/cart/index.html
+++ b/public/pages/cart/index.html
@@ -8,23 +8,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href=".../../../.../../../.../../../styles/index.css">
-    <link rel="stylesheet" href=".../../../.../../../.../../../styles/header.css">
-    <link rel="stylesheet" href=".../../../.../../../.../../../styles/footer.css">
-    <link rel="stylesheet" href="../../../styles/style.css">
+    <link rel="stylesheet" href="../../../styles/index.css">
+    <link rel="stylesheet" href="../../../styles/header.css">
+    <link rel="stylesheet" href="../../../styles/footer.css">
+    <link rel="stylesheet" href="./styles/style.css">
 
 </head>
 <body>
     <header>
         <nav>
-          <a href=".../../../.../../../.../../../index.html">
+          <a href="../../../index.html">
             <button class="nav-btn-header">Home</button>
         </a>
-        <a href=".../../../.../../../pages/sobre/index.html">
+        <a href="../../pages/sobre/index.html">
             <button class="nav-btn-header">Sobre</button>
         </a>
 
-        <a href=".../../../.../../../pages/login/index.html">
+        <a href="../../pages/login/index.html">
             <button class="nav-btn-header">Login</button>
         </a>
         </nav>
@@ -137,7 +137,7 @@
             </div>
         </nav>
         <div class="footer-logo">
-            <img src=".../../../.../../../.../../../assets/logo-icon.svg" alt="">
+            <img src="../../../assets/logo-icon.svg" alt="">
         </div>
     </footer>
 </body>
