--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="./public/pages/home/styles/home.css">
+    <link rel="stylesheet" href="./public/pages/home/styles/responsive.css">
     <link rel="stylesheet" href="./public/pages/home/styles/button-home.css">
     <link rel="stylesheet" href="./public/pages/home/styles/catalogue.css">
 </head>
