iniciando desenvolvimento da pagina de pagamento

--- a/public/pages/cart/index.html
+++ b/public/pages/cart/index.html
@@ -63,7 +63,7 @@
       <div class="total-price">
         <span id="total-price">Valor total: R$ 0,00</span>
       </div>
-      <button class="checkout-button">Pagamento</button>
+      <a href="../payment/index.html"><button class="checkout-button"Pagamento>Pagamento</button></a>
     </div>
   </main>
 
