Adicionando campo de senha

--- a/public/pages/panel/index.html
+++ b/public/pages/panel/index.html
@@ -134,6 +134,7 @@
                 <tr>
                   <th>ID</th>
                   <th>Usuário</th>
+                  <th>Senha</th>
                   <th>Administrador</th>
                   <th>Ações</th>
                 </tr>
